--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,5 +2,6 @@
   <h1>Navbar</h1>
   <li><%=link_to "Home", root_path  %></li>
   <li><%=link_to "About", static_pages_about_url %></li>
+  <li><%=link_to "Index", users_index_url %></li>
   </div>
 </nav>
